--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
 
 <body>
   <header class="top">
-    <h1>Happy Birthday, <span id="name">💗</span></h1>
-    <p class="subtitle">Swipe our memories → </p>
-  </header>
+  <h1>Happy Birthday, <span id="name">💗</span></h1>
+
+  <p class="subtitle">I picked a song just for you 🎵</p>
+
+  <div class="spotify-qr">
+    <img src="assets/spotify-qr.png" alt="Spotify song QR code">
+    <p>Scan to listen on Spotify 💚</p>
+  </div>
+</header>
+
 
   <main class="container">
     <section class="card">
@@ -58,3 +65,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
