--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
   <div class="spotify-qr">
     <img src="assets/spotify-qr.png" alt="Spotify song QR code">
-    <p>Scan to listen on Spotify 💚</p>
+    <a href="https://open.spotify.com/track/3FhxiwbG8PrvsrXu3mZpg5?si=6TkTDYuDSE6erE_lIqHVZw" target="_blank">
+  <img src="assets/spotify-qr.png">
+    </a>
   </div>
 </header>
 
@@ -65,4 +67,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
