Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <p class="subtitle">I picked a song just for you 🎵</p>
 
   <div class="spotify-qr">
-    <img src="assets/spotify-qr.png" alt="Spotify song QR code">
+    <img src="spotify-qr.png" alt="Spotify song QR code">
     <a href="https://open.spotify.com/track/3FhxiwbG8PrvsrXu3mZpg5?si=6TkTDYuDSE6erE_lIqHVZw" target="_blank">
-  <img src="assets/spotify-qr.png">
+  <img src="spotify-qr.png">
     </a>
   </div>
 </header>
@@ -67,5 +67,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
