--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </section>
 
     <footer class="footer">
-      <p>Made with love 💖</p>
+      <p>“We stick together, no matter what.” 💖</p>
     </footer>
   </main>
 
@@ -66,6 +66,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
