--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
   <header class="top">
   <h1>Happy Birthday, <span id="name">💗</span></h1>
 
-  <p class="subtitle">I picked a song just for you 🎵</p>
-
   <div class="spotify-qr">
     <a href="https://open.spotify.com/track/3FhxiwbG8PrvsrXu3mZpg5?si=6TkTDYuDSE6erE_lIqHVZw" target="_blank">
   <img src="spotify-qr.png">
     </a>
   </div>
+    <p class="subtitle">Click Me 🎵</p>
 </header>
 
 
@@ -66,6 +65,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
